# rofi-script

./: Cargo.toml  LICENSE  README.md
.github/workflows/: workflow.yml
examples/: browser.rs  simple.rs
src/: lib.rs
src/core/: env.rs  io.rs  mod.rs  option.rs
