[package]
name = "rofi_script"
version = "0.1.0"
authors = ["heyrict <xiezh0831@yahoo.co.jp>"]
edition = "2018"
categories = ["api-bindings"]
description = "A thin wrapper for writing rofi scripts"
keywords = ["rofi", "rofi_script"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/heyrict/rofi-script"

[dependencies]


[[examples]]
name = "simple"
path = "examples/simple.rs"
